--- a/wildfireIndex.html
+++ b/wildfireIndex.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="WildFire Store è la community di giochi di carte a Roma. Tornei, shop, eventi e servizi per tutti gli appassionati.">
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="images/favicon.png" type="image/png">
   <title>WildFire Store - Community di Giochi di Carte</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
   <style>
@@ -337,7 +337,6 @@
           <a href="#community">Community</a>
           <a href="#tornei">Tornei</a>
           <a href="#servizi">Servizi</a>
-          <a href="#contatti">Contatti</a>
         </nav>
       </header>
 
