--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="WildFire Store è la community di giochi di carte a Roma. Tornei, shop, eventi e servizi per tutti gli appassionati.">
   <link rel="icon" href="images/favicon.png" type="image/png">
-  <title>WildFire Store - Community di Giochi di Carte</title>
+  <title>WildFire</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
   <style>
     :root {
@@ -31,6 +31,11 @@
       font-family: 'Poppins', sans-serif;
       background-color: var(--grigio-chiaro);
       color: var(--nero-wildfire);
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
     }
 
     .wrapper {
@@ -179,7 +184,7 @@
       top: 50%;
       transform: translateY(-50%);
       font-size: 2rem;
-      color: rgb(255, 255, 255);
+      color: #fff;
       background-color: var(--rosso-wildfire);
       border: none;
       padding: 0.7rem 1.2rem;
@@ -276,49 +281,66 @@
       color: #ccc;
     }
 
-    @media (max-width: 992px) {
-      header {
-        padding: 0 1rem;
-      }
-
-      nav a {
-        padding: 0 0.8rem;
-        font-size: 0.9rem;
-      }
-    }
-
     @media (max-width: 768px) {
       header {
         flex-direction: column;
         height: auto;
-        padding: 1rem;
-        gap: 1rem;
+        padding: 0.5rem 1rem;
+        gap: 0.5rem;
+        text-align: center;
       }
 
       .brand {
-        width: 100%;
         justify-content: center;
       }
 
       nav {
-        width: 100%;
-        justify-content: center;
         flex-wrap: wrap;
-        gap: 5px;
+        justify-content: center;
       }
 
       nav a {
-        padding: 0.5rem 0.8rem;
-        height: auto;
-        font-size: 0.85rem;
+        padding: 0.6rem;
+        font-size: 0.9rem;
+        border-bottom: 1px solid #eee;
       }
 
       .carousel {
-        height: 400px;
+        height: auto;
+        aspect-ratio: 16 / 9;
       }
 
-      .slide h2 {
-        font-size: 2rem;
+      .slide-button {
+        font-size: 0.9rem;
+        padding: 0.6rem 1rem;
+      }
+
+      section {
+        padding: 2.5rem 1rem;
+      }
+
+      section h2 {
+        font-size: 1.6rem;
+      }
+
+      section p {
+        font-size: 0.95rem;
+        line-height: 1.6;
+      }
+
+      .footer-columns {
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+      }
+
+      .footer-column {
+        max-width: 100%;
+      }
+
+      .arrow {
+        font-size: 1.5rem;
+        padding: 0.5rem 0.8rem;
       }
     }
   </style>
@@ -326,7 +348,6 @@
 <body>
   <div class="wrapper">
     <div class="container">
-
       <header>
         <div class="brand">
           <img src="logo.png" alt="WildFire Store Logo" class="logo-img" />
@@ -401,7 +422,6 @@
           </div>
         </div>
       </footer>
-
     </div>
   </div>
 
