--- a/index.html
+++ b/index.html
@@ -366,6 +366,10 @@
           <img src="Sfondo1.png" alt="Torneo" />
           <a href="http://commhundred.com" target="_blank" class="slide-button">Scopri Commanhundred</a>
         </div>
+        <div class="slide active">
+          <img src="gorzoneslide.jpg" alt="Torneo" />
+          <a href="https://linktr.ee/ilgorzone" target="_blank" class="slide-button">Scopri il Gorzone</a>
+        </div>
         <div class="slide">
           <img src="sfondo2.jpg" alt="Eventi" />
         </div>
