aggiunta store al wildfire

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="WildFire Store è la community di giochi di carte a Roma. Tornei, shop, eventi e servizi per tutti gli appassionati.">
   <link rel="icon" href="images/favicon.png" type="image/png">
-  <title>WildFire</title>
+  <title>WildFire Store</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
   <style>
     :root {
