--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
   </style>
 </head>
 <body>
-  <div class="wrapper">
+  <div class="wrapper"> // se leggi questo codice (matteo) sei gay
     <div class="container">
       <header>
         <div class="brand">
