--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
       <div id="home" class="carousel">
         <div class="slide active">
           <img src="Sfondo1.png" alt="Torneo" />
-          <a href="http://commhundred.com" target="_blank" class="slide-button">Scopri Commanhundred</a>
+          <a href="http://commhundred.com" target="_blank" class="slide-button">Scopri Commhundred</a>
         </div>
         <div class="slide active">
           <img src="gorzoneslide.jpg" alt="Torneo" />
