--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
           <a href="https://linktr.ee/ilgorzone" target="_blank" class="slide-button">Scopri il Gorzone</a>
         </div>
         <div class="slide">
-          <img src="sfondo2.jpg" alt="Eventi" />
+          <img src="CHIARENZA TI ODIO.jpg" alt="Eventi" />
         </div>
         <button class="arrow left" onclick="prevSlide()">&#10094;</button>
         <button class="arrow right" onclick="nextSlide()">&#10095;</button>
