--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="WildFire Store è la community di giochi di carte a Roma. Tornei, shop, eventi e servizi per tutti gli appassionati.">
-  <link rel="icon" href="images/favicon.png" type="image/png">
-  <title>WildFire Store</title>
+  <meta name="description" content="Wildfire Store è la community di giochi di carte a Roma. Tornei, shop, eventi e servizi per tutti gli appassionati.">
+  <title>Wildfire Store</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link rel="icon" href="assets/icons/favicon.ico?v=1">
+  <link rel="icon" type="image/png" sizes="48x48" href="/assets/icons-whitebg/favicon-48x48.png?v=2">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons-whitebg/favicon-32x32.png?v=1">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons-whitebg/favicon-16x16.png?v=1">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons-whitebg/apple-touch-icon.png?v=1">
+  <link rel="manifest" href="assets/icons-whitebg/site.webmanifest?v=1">
+  <link rel="icon" href="/favicon.ico?v=3" sizes="any">
+
+  <!-- Colore barra indirizzi su mobile -->
+  <meta name="theme-color" content="#e30613">
+  <meta name="msapplication-TileColor" content="#e30613">
+
+
   <style>
     :root {
       --rosso-wildfire: #e30613;
@@ -421,8 +433,8 @@
             </div>
           </div>
           <div class="footer-bottom">
-            <p>© 2025 WildFire Store Roma - Tutti i diritti riservati</p>
-            <p>P.IVA 12345678901</p>
+            <p>© 2025 Wildfire Store Roma - Tutti i diritti riservati</p>
+            <p>P.IVA 14182451006</p>
           </div>
         </div>
       </footer>
