--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
     <div class="container">
       <header>
         <div class="brand">
-          <img src="logo.png" alt="WildFire Store Logo" class="logo-img" />
-          <div class="logo-text">WildFire Store</div>
+          <img src="logo.png" alt="Wildfire Store Logo" class="logo-img" />
+          <div class="logo-text">Wildfire Store</div>
         </div>
         <nav>
           <a href="#home">Home</a>
@@ -391,7 +391,7 @@
 
       <section id="community">
         <h2>La Nostra Community</h2>
-        <p>WildFire Store è il cuore pulsante della scena dei giochi di carte collezionabili a Roma. Offriamo un ambiente dove ogni giocatore, dal principiante al competitivo, trova il proprio spazio. Organizziamo eventi regolari, supportiamo la crescita della community e valorizziamo ogni partecipante con attività coinvolgenti e premi esclusivi.</p>
+        <p>Wildfire Store è il cuore pulsante della scena dei giochi di carte collezionabili a Roma. Offriamo un ambiente dove ogni giocatore, dal principiante al competitivo, trova il proprio spazio. Organizziamo eventi regolari, supportiamo la crescita della community e valorizziamo ogni partecipante con attività coinvolgenti e premi esclusivi.</p>
       </section>
 
       <section id="tornei">
@@ -401,7 +401,7 @@
 
       <section id="servizi">
         <h2>I Nostri Servizi</h2>
-        <p>Oltre ai tornei, WildFire Store offre vendita di carte singole, consulenza per la costruzione mazzi, un’area gioco dedicata per partite libere o testing, eventi prerelease, e serate dedicate. È anche possibile acquistare accessori, bustine e box dei tuoi giochi preferiti.</p>
+        <p>Oltre ai tornei, Wildfire Store offre vendita di carte singole, consulenza per la costruzione mazzi, un’area gioco dedicata per partite libere o testing, eventi prerelease, e serate dedicate. È anche possibile acquistare accessori, bustine e box dei tuoi giochi preferiti.</p>
       </section>
 
       <footer>
